# fraud-detection-copilot

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  domain_notes.md  pyproject.toml  v2_ideas.md
notebooks/: 01_eda.ipynb  02_feature_validation.ipynb  03_dataset_sanity.ipynb  04_evaluate_sanity.ipynb
notebooks/models/encoders/: categorical_mappings.json
scripts/: build_features.py  experiment_imbalance.py  train_baseline.py  tune_threshold.py
src/data/: load_data.py
src/features/: aggregations.py  encoding.py  split.py  time.py  uid.py  velocity.py
src/models/: cost.py  dataset.py  evaluate.py
tests/: test_cost.py  test_split.py  test_velocity.py
