[project]
name = "fraud-detection-copilot"
version = "0.1.0"
description = "End-to-end fraud detection system: LightGBM + SHAP + FastAPI + Streamlit dashboard with educational LLM agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "optuna>=3.6",
    # Explainability
    "shap>=0.45",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # Dashboard
    "streamlit>=1.33",
    # LLM
    "anthropic>=0.25",
    # Utils
    "python-dotenv>=1.0",
    "joblib>=1.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]